--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "name": "Mark Hendriksen"
   },
   "dependencies": {
-    "homebridge-http-utils": "github:hendriksen-mark/homebridge-http-utils"
+    "homebridge-http-utils": "^3.0.1"
   },
   "devDependencies": {
+    "@types/jest": "29.5.14",
+    "jest": "29.7.0",
+    "ts-jest": "29.3.4",
     "homebridge": "^2.0.0-beta.29",
     "semantic-release": "24.2.5",
     "nodemon": "3.1.10",
@@ -44,9 +47,14 @@
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "watch": "nodemon",
     "build": "rimraf ./dist && tsc && npm link",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "test": "jest"
   },
   "main": "dist/src/index.js",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "nodemonConfig": {
     "watch": [
       "src"
